# sentimara

./: .gitignore  Dockerfile  README.md  REBUILD_TIMESTAMP.txt  alembic.ini  app.py  docker-compose.yml  get-pip.py  loader_io.py  main.tf  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.py  terraform.tfstate  terraform.tfstate.backup  variables.tf
.github/workflows/: deploy.yml  rebuild.yml
api/: api.py  crud.py  deps.py  middleware.py
api/endpoints/: conversation.py  documents.py
chat/: constants.py  custom_sub_question_query_engine.py  engine.py  messaging.py  pg_vector.py  qa_response_synth.py  utils.py  workflow.py
chat/core/: prompt.py  settings.py
core/: config.py  db_config.py
events/: dataloader.py  event_handler.py
fakker/: __main__.py
libs/db/: base.py  session.py  wait_for_db.py
libs/helpers/: utils.py
libs/models/: base.py  chatdb-revised.py  chatdb.py  db.py
migrations/: env.py
migrations/versions/: 0cb7542c5f72_update_the_query_engine_tools.py  0e40a1de89c3_update_default_settings_for_temprature_.py  1f3df2f9cadd_update_the_batch_processing_techniques_.py  2bb586b4e89c_update_human_feedback_model_to_.py  2ddd660eb154_.py  307164d47ded_added_agent_step_enum.py  6e1d2ecdb44c_update_default_settings_for_temprature_.py  795666e0a7f4_added_new_human_feedback_model.py  832a21f82318_initial_migration.py  89b85f102cd5_added_headline_to_conversation.py  9b092387ac61_initial_migration.py  9c9e567fc9e6_add_pgcrypto_extension.py  a94a4c83012a_add_email_column_to_responses_table.py  b8dba50d6249_add_uuid_ossp_extension.py  caa1260da93a_added_new_tables.py  e183cac3ca2b_update_human_feedback_model_and_add_.py
seeder/: db_seeder.py  document_seed.py  seed_db.py
sentimara.backend/: .dockerignore  Makefile  REBUILD_TIMESTAMP.txt  app.py  get-pip.py
sentimara.backend/api/endpoints/: conversation.py  documents.py  health.py
sentimara.backend/chat/: constants.py  engine.py  qa_response_synth.py  workflow.py
sentimara.backend/chat/core/: prompt.py
sentimara.backend/libs/: pyproject.toml
sentimara.backend/libs/models/: base.py
sentimara.backend/migrations/: env.py
sentimara.backend/migrations/versions/: 007b621e23b4_change_uuid_usage.py  a7ffcb154847_remove_unique_on_email.py
sentimara.frontend/: package-lock.json  package.json  pnpm-lock.yaml
sentimara.frontend/src/app/: page.tsx
