[tool.poetry]
name = "sentimara"
version = "0.1.0"
description = ""
authors = ["Kaponda Mulambia <mulambiakaponda@gmail.com>", "Byamasu Patrick Paul <ptrckbyamasu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "2.9.9"
asyncpg = "^0.29.0"
starlette = "0.38.6"
python-dotenv = "^1.0.1"
sse-starlette = "^2.1.3"
uvicorn = "^0.30.6"
alembic = "^1.13.3"
openai = "^1.66.5"
llama-index = "^0.12.25"
llama-index-llms-anthropic = "^0.6.10"
llama-index-llms-openai = "^0.3.25"
llama-index-question-gen-openai = "^0.3.0"
fastapi = "0.115.0"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.8.1"
fire = "^0.7.0"
llama-index-llms-azure-openai = "0.3.2"
llama-index-embeddings-azure-openai = "0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
